k8s/overlays/on-prem-okd/ingress-remove.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrm-ingress      
  namespace: hrm-project 
$patch: delete
